# process-tree-alignments-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  depth.json  duration_long.json  duration_long_percentage.json  duration_quick.json  duration_short_percentage.json  perf.data  perf.data.old  quick-nodes.json  quick.json  slow-nodes.json  slow.json  tree_depiction.txt
data/normals/: doubler.csv  main.csv
data/outliers/: doubler.csv  main.csv
data/ptml/: BPI_Challenge_2012_pt00.ptml  BPI_Challenge_2012_pt10.ptml  BPI_Challenge_2012_pt25.ptml  BPI_Challenge_2012_pt50.ptml  BPI_Challenge_2017_pt00.ptml  BPI_Challenge_2017_pt10.ptml  BPI_Challenge_2017_pt25.ptml  BPI_Challenge_2017_pt50.ptml
remote/10/BPI_Challenge_2012_pt00/: costs.csv
remote/10/BPI_Challenge_2012_pt10/: costs.csv
remote/10/BPI_Challenge_2012_pt25/: costs.csv
remote/10/BPI_Challenge_2012_pt50/: costs.csv
remote/10/BPI_Challenge_2017_pt00/: costs.csv
remote/10/BPI_Challenge_2017_pt10/: costs.csv
remote/10/BPI_Challenge_2017_pt25/: costs.csv
remote/10/BPI_Challenge_2017_pt50/: costs.csv
remote/11/BPI_Challenge_2012_pt00/: costs.csv
remote/11/BPI_Challenge_2012_pt10/: costs.csv
remote/11/BPI_Challenge_2012_pt25/: costs.csv
remote/11/BPI_Challenge_2012_pt50/: costs.csv
remote/11/BPI_Challenge_2017_pt00/: costs.csv
remote/11/BPI_Challenge_2017_pt10/: costs.csv
remote/11/BPI_Challenge_2017_pt25/: costs.csv
remote/11/BPI_Challenge_2017_pt50/: costs.csv
remote/12/BPI_Challenge_2012_pt00/: costs.csv
remote/12/BPI_Challenge_2012_pt10/: costs.csv
remote/12/BPI_Challenge_2012_pt25/: costs.csv
remote/12/BPI_Challenge_2012_pt50/: costs.csv
remote/12/BPI_Challenge_2017_pt00/: costs.csv
remote/12/BPI_Challenge_2017_pt10/: costs.csv
remote/12/BPI_Challenge_2017_pt25/: costs.csv
remote/12/BPI_Challenge_2017_pt50/: costs.csv
remote/13/BPI_Challenge_2012_pt00/: costs.csv
remote/13/BPI_Challenge_2012_pt10/: costs.csv
remote/13/BPI_Challenge_2012_pt25/: costs.csv
remote/13/BPI_Challenge_2012_pt50/: costs.csv
remote/13/BPI_Challenge_2017_pt00/: costs.csv
remote/13/BPI_Challenge_2017_pt10/: costs.csv
remote/13/BPI_Challenge_2017_pt25/: costs.csv
remote/13/BPI_Challenge_2017_pt50/: costs.csv
remote/14/BPI_Challenge_2012_pt00/: costs.csv
remote/14/BPI_Challenge_2012_pt10/: costs.csv
remote/14/BPI_Challenge_2012_pt25/: costs.csv
remote/14/BPI_Challenge_2012_pt50/: costs.csv
remote/14/BPI_Challenge_2017_pt00/: costs.csv
remote/14/BPI_Challenge_2017_pt10/: costs.csv
remote/14/BPI_Challenge_2017_pt25/: costs.csv
remote/14/BPI_Challenge_2017_pt50/: costs.csv
remote/15/BPI_Challenge_2012_pt00/: costs.csv
remote/15/BPI_Challenge_2012_pt10/: costs.csv
scripts/: alignment_comparison.py  analysis.ipynb  analysis_2.ipynb  csv_analyze.py  data_loader.py  eval_output.py  heatmap.py  main.py  python_dyn_align.py  renderTree.py  scripts.py  setup.py  test.py  test2.py
src/: TreeNode.cpp  TreeNode.h  bindings.cpp  bindings.h  main.cpp  main.h  optimizations.cpp  parser.cpp  parser.h  treeAlignment.cpp  treeAlignment.h  treeNode.cpp  treeNode.h  treeProcessor.cpp  treeProcessor.h  utils.cpp  utils.h
tests/: alignTest.cpp  possibleSplitsTest.cpp  test.cpp
(+106 files in other folders)
